# image_sorting

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  copy_pictures.sh  pyproject.toml
image_sorting/: hash_images.py
